--- a/exercicios/ex023/tabela01.html
+++ b/exercicios/ex023/tabela01.html
@@ -12,22 +12,23 @@
         }
 
         table{
-            width: 300px;
+            width: 400px;
+            height: 400px;
             border-collapse:collapse ;
         }
-
-        tr.linha{
-            background-color: gray;
-        }
-
-        td.dado{
-            background-color: yellow;
-        }
-
         td{
             border: 1px solid black;
             padding: 10px;
+            text-align: left;
+            vertical-align: middle;
         }
+
+        .numero{
+            text-align: right;
+            vertical-align: middle;
+        }
+
+        
     </style>
 </head>
 <body>
@@ -40,28 +41,28 @@
     -->
 
     <table>
-        <tr class="linha"> <!--Primeira linha-->
+        <tr> <!--Primeira linha-->
             <td>A1</td>
             <td>B1</td>
-            <td>C1</td>
+            <td class="numero">C1</td>
         </tr>
 
         <tr> <!--Segunda linha-->
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
 
         <tr> <!--Terceira linha-->
             <td>A3</td>
-            <td class="dado">B3</td>
-            <td>C3</td>
+            <td>B3</td>
+            <td class="numero">C3</td>
         </tr>
 
         <tr> <!--Quarta linha-->
             <td>A4</td>
             <td>B4</td>
-            <td>C4</td>
+            <td class="numero">C4</td>
         </tr>
     </table>
 
