--- a/relatorio/desafio/index.html
+++ b/relatorio/desafio/index.html
@@ -7,19 +7,23 @@
     <style>
         body{
             background-color: black;
+
         }
         h1{
             color: white;
         }
+
     </style>
     <title>Cursos</title>
 </head>
 <body>
     <h1>Cursos para assistir</h1>
-    <a href="paginas/hardware.html" target="_self" rel="next"><img src="imagens/thumb-hardware.png" alt="Curso de Hardware"></a>
-    <a href="paginas/html.html" target="_self" rel="next"><img src="imagens/thumb-html.png" alt="Curso de HTML"></a>
-    <br>
-    <a href="paginas/javascript.html" target="_self" rel="next"><img src="imagens/thumb-js.png" alt="Curso de Java Script"></a>
-    <a href="paginas/python.html"><img src="imagens/thumb-python.png" alt="Curso de Python"></a>
+    <picture>
+        <a href="paginas/hardware.html" target="_self" rel="next"><img src="imagens/thumb-hardware.png" alt="Curso de Hardware"></a>
+        <a href="paginas/html.html" target="_self" rel="next"><img src="imagens/thumb-html.png" alt="Curso de HTML"></a>
+        <br>
+        <a href="paginas/javascript.html" target="_self" rel="next"><img src="imagens/thumb-js.png" alt="Curso de Java Script"></a>
+        <a href="paginas/python.html"><img src="imagens/thumb-python.png" alt="Curso de Python"></a>
+    </picture>
 </body>
 </html>
