--- a/exercicios/ex023/tabela02.html
+++ b/exercicios/ex023/tabela02.html
@@ -12,11 +12,28 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
-
+        caption{
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 1.2em;
+            font-weight: bolder;
+            color: black;
+            background-color: lightgray;
+            padding: 10px;
+        }
+        thead> tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: gray;
+        }
         thead, tfoot{
             background-color: gray;
             color: white;
+        }
+
+        tbody > tr:nth-child(odd){
+            background-color: lightblue;
         }
 
         td, th{
@@ -33,10 +50,11 @@
     <h1>Uso de tabelas grandes</h1>
     <!-- Anatomia de tabelas grandes -->
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estados</th>
-                <th>População</th>
+                <th scope="col">Estados</th>
+                <th scope="col">População</th>
             </tr>
         </thead>
         <tbody>
@@ -147,10 +165,18 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num"><strong>0000</strong></td>
             </tr>
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam cum facilis ipsa, blanditiis odio dolor, mollitia a eveniet repellendus ipsam quo magni eius accusantium voluptates molestiae nesciunt, culpa numquam! Culpa! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore sunt adipisci possimus, temporibus quasi, ratione natus rem veniam a enim voluptate modi voluptatem porro perspiciatis? Cupiditate perferendis vitae quam aspernatur?</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam cum facilis ipsa, blanditiis odio dolor, mollitia a eveniet repellendus ipsam quo magni eius accusantium voluptates molestiae nesciunt, culpa numquam! Culpa! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore sunt adipisci possimus, temporibus quasi, ratione natus rem veniam a enim voluptate modi voluptatem porro perspiciatis? Cupiditate perferendis vitae quam aspernatur?</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam cum facilis ipsa, blanditiis odio dolor, mollitia a eveniet repellendus ipsam quo magni eius accusantium voluptates molestiae nesciunt, culpa numquam! Culpa! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore sunt adipisci possimus, temporibus quasi, ratione natus rem veniam a enim voluptate modi voluptatem porro perspiciatis? Cupiditate perferendis vitae quam aspernatur?</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam cum facilis ipsa, blanditiis odio dolor, mollitia a eveniet repellendus ipsam quo magni eius accusantium voluptates molestiae nesciunt, culpa numquam! Culpa! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore sunt adipisci possimus, temporibus quasi, ratione natus rem veniam a enim voluptate modi voluptatem porro perspiciatis? Cupiditate perferendis vitae quam aspernatur?</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam cum facilis ipsa, blanditiis odio dolor, mollitia a eveniet repellendus ipsam quo magni eius accusantium voluptates molestiae nesciunt, culpa numquam! Culpa! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore sunt adipisci possimus, temporibus quasi, ratione natus rem veniam a enim voluptate modi voluptatem porro perspiciatis? Cupiditate perferendis vitae quam aspernatur?</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam cum facilis ipsa, blanditiis odio dolor, mollitia a eveniet repellendus ipsam quo magni eius accusantium voluptates molestiae nesciunt, culpa numquam! Culpa! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore sunt adipisci possimus, temporibus quasi, ratione natus rem veniam a enim voluptate modi voluptatem porro perspiciatis? Cupiditate perferendis vitae quam aspernatur?</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam cum facilis ipsa, blanditiis odio dolor, mollitia a eveniet repellendus ipsam quo magni eius accusantium voluptates molestiae nesciunt, culpa numquam! Culpa! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore sunt adipisci possimus, temporibus quasi, ratione natus rem veniam a enim voluptate modi voluptatem porro perspiciatis? Cupiditate perferendis vitae quam aspernatur?</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam cum facilis ipsa, blanditiis odio dolor, mollitia a eveniet repellendus ipsam quo magni eius accusantium voluptates molestiae nesciunt, culpa numquam! Culpa! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore sunt adipisci possimus, temporibus quasi, ratione natus rem veniam a enim voluptate modi voluptatem porro perspiciatis? Cupiditate perferendis vitae quam aspernatur?</p>
 </body>
 </html>
