--- a/exercicios/ex024/iframe01.html
+++ b/exercicios/ex024/iframe01.html
@@ -5,20 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iframe</title>
+    <style>
+        iframe{
+            width: 500px;
+            height: 500px;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando iframe</h1>
+    <!-- Tamanho padrão 300x150  -->
     <p>Acessando o site do 
         
-        <iframe src="https://cursoemvideo.com" frameborder="0">
-
+        <iframe src="https://cursoemvideo.com" frameborder="0" height="500" width="400" scolling="">
+            <a href="https://cursoemvideo.com" target="_blank">Curso em video</a>
         </iframe>
         
     para programar
     </p>
 
-    <p>
-        o site do <iframe src="https://www.google.com.br" frameborder="0"></iframe>
+    <p>O Repositório do Guanabara
+
+        <iframe src="https://gustavoguanabara.github.io/" frameborder="0" height="500" width="500"> <a href="https://gustavoguanabara.github.io/" target="_blank">Repositorio do Guanabara</a></iframe>
+        é muito legal
     </p>
 </body>
 </html>
