--- a/relatorio/desafio-05/pacote-d013/index.html
+++ b/relatorio/desafio-05/pacote-d013/index.html
@@ -15,10 +15,10 @@
         </section>
         <section class="redes-sociais">
             <a href="paginas/home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a> <br>
-            <a href="/paginas/youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a> <br>
-            <a href="/paginas/github.html" target="tela"> <img src="imagens/logo-github.jpg" alt=""></a> <br>
+            <a href="paginas/youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a> <br>
+            <a href="paginas/github.html" target="tela"> <img src="imagens/logo-github.jpg" alt=""></a> <br>
             <a href="paginas/facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a> <br>
-            <a href="/paginas/instagram.html" target="tela"> <img src="imagens/logo-instagram.jpg" alt="instagram"></a> <br>
+            <a href="paginas/instagram.html" target="tela"> <img src="imagens/logo-instagram.jpg" alt="instagram"></a> <br>
             <a href="paginas/twitter.html" target="tela"> <img src="imagens/logo-twitter.jpg" alt="twitter"></a> <br>
         </section>
     </main>
